--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/responsive/css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 </head>
 <body>
 	<header>
 		<div class="header-block">
-			<h3>LOGO</h3>
+			<img class="logo" src="images/LOGO.svg">
 			<nav class="navigation">
 				<ul class="nav-ul">
-					<li class="mav-list">ABOUT </li>
-					<li class="mav-list">PROJECTS </li>
-					<li class="mav-list">SERVICES </li>
-					<li class="mav-list">CONTACT </li>
+					<li class="nav-list">ABOUT </li>
+					<li class="nav-list">PROJECTS </li>
+					<li class="nav-list">SERVICES </li>
+					<li class="nav-list">CONTACT </li>
 				</ul>
 			</nav>
 			<div class="burger">
 				<i class="fi-rr-menu-burger"></i>
 			</div>
-			<div>
+			<div class="media-block">
 				<p>FOLLOW US</p>
 
 			</div>
@@ -55,13 +55,11 @@
 				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
 			</div>
 			<div class="main-sec box-6">
-				<h3>BUILDING REQUESTS
-PAPERWORK</h3>
+				<h3>BUILDING REQUESTS PAPERWORK</h3>
 				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
 			</div>
 			<div class="main-sec box-7">
-				<h3>ARRANGE FOR
-BUILDING REQUESTS</h3>
+				<h3>ARRANGE FOR BUILDING REQUESTS</h3>
 				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
 			</div>
 			<div class="main-sec box-8">
